------------------- Upcoming version 1.5 -----------------------------

Major features:
- Support for OPARI2 2.0 was integrated. OPARI2 is now more
  flexible to enable support for other pragma/directive based
  paradigms.

Features and improvements:

User tools and API improvements and changes:

- The option --pomp does not take any options any more.
- Specific options for OPARI2 are passed via the
  --opari=<parameter-list> option.
- To enable or disable instrumentation of OpenMP the options
  --openmp and --noopenmp have been added. Note that for compile
  units with enabled OpenMP compilerflag, instrumentation is
  enabled by default. However, when manually disabling, some
  instrumentation must still be carried out, to ensure a
  thread-safe execution of the measurement system.
- POMP user instrumentation is no longer automatically activated
  together with OpenMP instrumentation. The --pomp flag has to be
  explicitly specified with the scorep command

Bugfixes:

------------------- Upcoming version 1.4.2 ---------------------------

Bugfixes:
 - The OpenMP flag for PGI compilers (-mp) may have a value appended.
   In this case, the instrumenter did not detect the OpenMP paradigm
   properly. Fixed.
 - On Cray systems, a conflict between the -eZ and and the -eP flag
   occurred if the instrumenter performed preprocessing before OPARI2
   instrumentation and the command line contains -eZ. Fixed.
 - If the user explicitly requires static Score-P libraries by specifying
   --static on the command line, scorep-config provides also full paths
   to the dependencies of its libraries, which might cause problems if
   the libraries are linked with dynamic libraries. Fixed.
 - The preprocessing step of CUDA source files for the OPARI2 instrumentation
   did not add preprocessing flags to the preprocessor invocation. Thus, it
   becomes a full compilation step. Fixed.
 - Fix exponent in the CUDA metric definitions.