@@ -33,7 +33,7 @@ AC_DEFUN([AC_SCOREP_FRONTEND_GCC_PLUGIN], [])
 scorep_enable_gcc_plugin=detect
 AC_ARG_ENABLE([gcc-plugin],
     [AS_HELP_STRING([--disable-gcc-plugin],
-        [Disable support for the GCC plug-in instrumentation. Default is to determine support automatically. This disables it by request and fail if support can't be satisfied but was requested.])],
+        [Disable support for the GCC plug-in instrumentation. Default is to determine support automatically. This disables it by request and fail if support cannot be satisfied but was requested.])],
     [scorep_enable_gcc_plugin=${enableval}
     AS_CASE([${scorep_enable_gcc_plugin}],
         [yes|no], [:],
@@ -49,8 +49,40 @@ AS_IF([test "x${ac_scorep_cross_compiling}" = "xyes"], [
     # suppress warnings about 'using cross tools not prefixed with host triplet'
     ac_tool_warned=yes])
 
+# we always need the backend compiler
 AC_SCOREP_CHECK_COMPILER_VAR_SET([CC])
 AC_SCOREP_CHECK_COMPILER_VAR_SET([CXX])
+
+# this is the target gcc for which we want to build the plug-in.
+# this is always the initial value of $CC and the corresponding flags variables
+GCC_PLUGIN_TARGET_CC=$CC
+GCC_PLUGIN_TARGET_CPPFLAGS=$CPPFLAGS
+GCC_PLUGIN_TARGET_CFLAGS=$CFLAGS
+GCC_PLUGIN_TARGET_LDFLAGS=$LDFLAGS
+GCC_PLUGIN_TARGET_LIBS=$LIBS
+
+AS_IF([test "x${ac_scorep_cross_compiling}" = "xyes"], [
+
+    AC_ARG_VAR([CC_FOR_BUILD], [C compiler command for the plug-in build])
+    AC_ARG_VAR([CXX_FOR_BUILD], [C++ compiler command for the plug-in build])
+    AC_ARG_VAR([CPPFLAGS_FOR_BUILD], [(Objective) C/C++ preprocessor flags for the plug-in build, e.g., -I<include dir> if you have headers in a nonstandard directory <include dir>])
+    AC_ARG_VAR([CFLAGS_FOR_BUILD], [C compiler flags for the plug-in build])
+    AC_ARG_VAR([CXXFLAGS_FOR_BUILD], [C++ compiler flags for the plug-in build])
+    AC_ARG_VAR([LDFLAGS_FOR_BUILD], [linker flags for the plug-in build, e.g., -L<lib dir> if you have libraries in a nonstandard directory <lib dir>])
+    AC_ARG_VAR([LIBS_FOR_BUILD], [libraries to pass to the linker for the plug-in build, e.g., -l<library>])
+
+    AC_SCOREP_CHECK_COMPILER_VAR_SET([CC_FOR_BUILD])
+    AC_SCOREP_CHECK_COMPILER_VAR_SET([CXX_FOR_BUILD])
+
+    AC_SCOREP_CONVERT_FOR_BUILD_FLAGS([CPPFLAGS])
+    AC_SCOREP_CONVERT_FOR_BUILD_FLAGS([CFLAGS])
+    AC_SCOREP_CONVERT_FOR_BUILD_FLAGS([CXXFLAGS])
+    AC_SCOREP_CONVERT_FOR_BUILD_FLAGS([LDFLAGS])
+    AC_SCOREP_CONVERT_FOR_BUILD_FLAGS([LIBS])
+
+    AC_SCOREP_CONVERT_FOR_BUILD_COMPILER([CC])
+    AC_SCOREP_CONVERT_FOR_BUILD_COMPILER([CXX])
+])
 
 AM_INIT_AUTOMAKE([foreign color-tests 1.11.1 -Wall tar-pax])
 AM_SILENT_RULES([yes])
@@ -62,6 +94,22 @@ AC_SUBST([LIBTOOL_DEPS])
 AC_SCOREP_PLATFORM_SETTINGS
 
 AC_LANG_PUSH([C])
+# get vendor for the target CC first
+save_CC=$CC
+save_CPPFLAGS=$CPPFLAGS
+save_CFLAGS=$CFLAGS
+CC=$GCC_PLUGIN_TARGET_CC
+CPPFLAGS=$GCC_PLUGIN_TARGET_CPPFLAGS
+CFLAGS=$GCC_PLUGIN_TARGET_CFLAGS
+
+AX_COMPILER_VENDOR
+scorep_gcc_plugin_target_vendor=${ax_cv_c_compiler_vendor}
+AS_UNSET([ax_cv_c_compiler_vendor])
+CC=$save_CC
+CPPFLAGS=$save_CPPFLAGS
+CFLAGS=$save_CFLAGS
+
+# get vendor for the plug-in builder
 AX_COMPILER_VENDOR
 AC_LANG_POP([C])
 
@@ -76,16 +124,14 @@ AC_SUBST([PKGDATADIR])
 
 # Only if the platform supports shared libraries, try to check for plug-in
 # support in GCC
-AS_CASE([${cross_compiling},${ax_cv_c_compiler_vendor},${enable_shared},${scorep_enable_gcc_plugin}],
-    [*,*,*,no], dnl early avoid checks if the user disabled detection
+AS_CASE([${scorep_gcc_plugin_target_vendor},${enable_shared},${scorep_enable_gcc_plugin}],
+    [*,*,no], dnl early avoid checks if the user disabled detection
         [AFS_SUMMARY([GCC plug-in support], [no, explicitly disabled via --disable-gcc-plugin])],
-    [no,gnu,yes,*],
+    [gnu,yes,*],
         [SCOREP_GCC_PLUGIN],
-    [yes,*,*,*],
-        [AFS_SUMMARY([GCC plug-in support], [no, disabled on cross build machines])],
-    [*,*,no,*],
+    [*,no,*],
         [AFS_SUMMARY([GCC plug-in support], [no, need support for shared libraries])],
-    [*,*,*,*],
+    [*,*,*],
         [AFS_SUMMARY([GCC plug-in support], [no, only GNU compilers supported])])
 
 AM_COND_IF([HAVE_GCC_PLUGIN_SUPPORT],
