@@ -7,7 +7,10 @@
 #define SCOREP_OPENMP_CFLAGS "@OPENMP_CFLAGS@"
 #define SCOREP_INCLUDEDIR    "@INCLUDEDIR@"
 #define SCOREP_BINDIR        "@BINDIR@"
-#define SCOREP_PKGLIBDIR     "@PKGLIBDIR@"
+
+#define SCOREP_BACKEND_PKGLIBDIR "@BACKEND_PKGLIBDIR@"
+#define SCOREP_PKGLIBDIR         "@PKGLIBDIR@"
+
 #define SCOREP_DATADIR       "@PKGDATADIR@"
 #define SCOREP_DOCDIR        "@DOCDIR@"
 #define SCOREP_CC            "@CC@"
